--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             android:name=".Login"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".Images"
+            android:label="@string/app_name">
+        </activity>
     </application>
 
 </manifest>
