--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "co.qualitysolutions.donado"
+        applicationId "co.qualitysolutions.donateapp"
         minSdkVersion 13
         targetSdkVersion 20
         versionCode 1
